# gfm-serve

./: .gitmodules  AGENTS.md  README.md  docker-compose.gpu.yml  docker-compose.yml  environment.yml  pyproject.toml
docker/: Dockerfile.common  Dockerfile.depth-anything3  Dockerfile.map-anything  Dockerfile.pi3  Dockerfile.vggt
docs/: api.md  architecture.md  clients.md  migration-v1.md
docs/plans/: gfm-multi-model-service.md
examples/: depth_anything_3_client.py  vggt_client.py
scripts/: bootstrap_conda.sh  check_env.py  client_example.py  docker-entrypoint.sh  docker_compose.sh
services/depth-anything-3/: Dockerfile  README.md  pyproject.toml
services/depth-anything-3/scripts/: gpu_smoke.py  smoke_import.py
services/depth-anything-3/src/gfm_backend_depth_anything_3/: __init__.py  backend.py  config.py
services/depth-anything-3/tests/: test_backend.py
services/vggt/: Dockerfile  README.md  pyproject.toml
services/vggt/scripts/: smoke_import.py
services/vggt/src/gfm_backend_vggt/: __init__.py  backend.py  config.py
services/vggt/tests/: test_geometry_contract.py
tests/: test_api.py  test_backends.py  test_conformance.py  test_contracts.py  test_legacy_imports.py  test_storage.py
vggt_serve/: __init__.py  api.py  app.py  config.py  inference.py  schemas.py  storage.py
vggt_serve/backends/: __init__.py  base.py  registry.py  vggt.py
